--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="btn-group">
-        <a href="#" class="btn">İşe al</a>
+        <a href="https://www.linkedin.com/in/gokdenizmakar/" class="btn">İşe al</a>
         <a href="#contact" class="btn">İletişim</a>
       </div>
     </div>
