--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="home-content">
       <h1>Merhaba, ben <span>Gökdeniz</span>!</h1>
       <h3 class="text-animation">Ben bir <br><span></span></h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quidem id atque necessitatibus deleniti exercitationem libero sed maiores obcaecati, in odio, ad quam impedit aliquid dicta. Optio repellat alias facilis.</p>
+      <p>Bilgisayar programcılığı mezunuyum. kenidimi Backend alanında geliştirmekteyim. <a href="#education" class="">Eğitimler</a> bölümüne eklemediğim ama izlediğim çeşitli Youtube ve Udemy kursları mevcut. İşin best practice dediğimiz tarafına özellikle yükleniyorum. .NET sürüm güncellemelerini şimdilik çok fazla kullanamasam da takip ediyorum. Belki siz ilk işimi almamda bana yardımcı olup, bu araştırmalarımın faydalı olmasına sebep olabilirsiniz! </p>
 
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/gokdenizmakar/" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -37,7 +37,7 @@
       </div>
 
       <div class="btn-group">
-        <a href="https://www.linkedin.com/in/gokdenizmakar/" class="btn">İşe al</a>
+        <a href="https://www.linkedin.com/in/gokdenizmakar/" class="btn" target="_blank">İşe al</a>
         <a href="#contact" class="btn">İletişim</a>
       </div>
     </div>
