--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="services-info">
           <h4>Angular Projeleri</h4>
           <p>
-            Angular ile tecrübesi pek olmayan biriyim. Bir kere kullandım ancak çok yanlıştı yapılarım. Şuanda devam etmekte olan Yetenek Başakşehir eğitiminin ilerleyen süreçlerinde göreceğim. Siz bu içeriği incelerken eğer tarih 2024'ün 10. ayından sonraysa, bu konuyla ilgili de benimle iletişime geçebileceğinizi düşnüyorum&#9786;
+            Şuanda devam etmekte olan Yetenek Başakşehir eğitiminin ilerleyen süreçlerinde göreceğim. Siz bu içeriği incelerken eğer tarih 2024'ün 10. ayından sonraysa, bu konuyla ilgili de benimle iletişime geçebileceğinizi düşnüyorum&#9786;
           </p>
         </div>
       </div>
@@ -142,7 +142,7 @@
    <!-- Yetenekler -->
    <section class="skills" id="skills">
     <div class="skills-box">
-      <h2 class="heading">Yetenekeler</h2>
+      <h2 class="heading">Yetenekler</h2>
 
       <div class="wrapper">
         
@@ -270,6 +270,7 @@
     </form>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
     <div class="social">
       <a href="#"><i class="bx bxl-linkedin"></i></a>
